// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentStatusIcon should match snapshot for payment status Paid 1`] = `
<div>
  <svg
    aria-hidden="true"
    aria-label="Bezahlt am 28.05.2023"
    class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-4b67si-MuiSvgIcon-root"
    data-mui-internal-clone-element="true"
    data-testid="CheckCircleOutlineIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
</div>
`;

exports[`PaymentStatusIcon should match snapshot for payment status PaidPartially 1`] = `
<div>
  <svg
    aria-hidden="true"
    aria-label="Teilweise bezahlt am 28.05.2023 (0.01€ von 600.00€)"
    class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-3adcp6-MuiSvgIcon-root"
    data-mui-internal-clone-element="true"
    data-testid="CheckCircleOutlineIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
    />
  </svg>
</div>
`;

exports[`PaymentStatusIcon should match snapshot for payment status Unpaid 1`] = `
<div>
  <svg
    aria-hidden="true"
    aria-label="Unbezahlt"
    class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1wxstni-MuiSvgIcon-root"
    data-mui-internal-clone-element="true"
    data-testid="HighlightOffIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
    />
  </svg>
</div>
`;
